nlamah/src/main/resources/org/nlamah/QL/test/qls/error/unstyledquestionerror.ql
form test
{
	question1 number "test1"
	question2 text "test2"
}